app/component/map/map.scss
$small-map-height: 10rem;
$stop-thin-opacity: 0.2;
$top-bar-height: 64px;

div.map {
  max-height: 100%;
  position: relative;
  .leaflet-container .leaflet-control-attribution {
    width: 107px;
    height: 22px;
    opacity: 0.7;
    border-radius: 11px;
    background-color: #ffffff;
    margin: 10px;
    position: relative;
    top: -5px;
  }
  .leaflet-container .leaflet-popup-close-button {
    color: $primary-color;
    width: 32px;
    height: 32px;
    top: 12px;
    right: 4px;
    padding: 0;
  }
  .leaflet-container .leaflet-control-attribution a {
    width: 94px;
    height: 11px;
    font-family: $font-family;
    font-size: 11px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: -0.7px;
    text-align: right;
    color: #666666;
    vertical-align: -3px;
  }
}

.below-map {
  overflow: auto;
}

.summary-map {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  min-height: 100px;
  position: relative;

  .summary-map-buttons {
    bottom: 36px;
    display: flex;
    left: 20px;
    max-height: 36px;
    position: absolute;
    z-index: index($zindex, map-buttons);

    & [role='button'] {
      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
      max-height: 36px;
      max-width: 36px;
    }
  }
}
.mobile {
  .map {
    div.leaflet-control-scale.leaflet-control {
      margin-right: 15px;
    }
    z-index: index($zindex, map-container);
  }

  .drawer-container {
    overflow-y: scroll;
    height: 100%;
    position: absolute;
    width: 100%;
    .drawer-padding {
      height: 90%;
      width: 0;
    }
    .drawer-content {
      min-height: 50vh;
      background: white;
      position: relative;
      z-index: $mobile-drawer-content-zindex;
      .drag-line {
        width: 30px;
        height: 4px;
        border-radius: 2px;
        background-color: #cccccc;
        display: block;
        z-index: index($zindex, mobile-drawer-drag-line);
        margin: auto;
        position: relative;
        top: -5px;
      }
      .content-container {
        position: relative;
        top: -15px;
        box-shadow: 0 0px 10px -2px rgba(0,0,0,0.3);
        border-radius: 15px 15px 0 0;
        padding-top: 15px;
        background-color: white;
      }
    }
  }

  .overlay-mover {
    z-index: 401;
    position: absolute;
    width: 100%;
    bottom: 10%;
    transition: transform 0.1s;
  }
  .map .leaflet-bottom {
    bottom: 10%;
    transition: transform 0.1s;
    .leaflet-control-attribution {
      background-color: rgba(0,0,0,0);
    }
  }
  .map-with-tracking-buttons {
    right: 15px;
    bottom: 45px;
  }

  .back-button {
    .icon-holder, .icon-holder:focus, .icon-holder:hover {
      padding: 0.55em 0.2em 0px 0px !important;
      font-size: 16px;
      z-index: index($zindex, map-buttons);
      background: white;
      height: 2.5em;
      width: 2.5em;
      border-radius: 50%;
      box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.2);
      left: 20px;
      top: 25px;
      button {
        outline: none;
      }
      .icon-container {
        height: inherit;
      }
    }
  }

  .location-popup-wrapper {
    .zone-icon-container {
      margin-top: 10px;
    }
  }
}
div.map.small {
  min-height: $small-map-height;
}
div.map.full {
  position: relative;
  min-height: $small-map-height;
  max-height: 100%;
  flex-grow: 1;
  flex-basis: 0;
}

div.below-map {
  height: calc(100% - #{$small-map-height});
}

div.leaflet-bottom.leaflet-right div.leaflet-control-zoom {
  width: 36px;
  height: 73px;
  border-radius: 5px;
  background-color: #ffffff;
  margin-right: 30px;
  margin-bottom: 24px;
  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
  &.leaflet-bar {
    border: none;
  }
  .icon {
    font-size: 18px;
  }
  a {
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: 36px;
    height: 36px;
    line-height: 18px;
    font-size: 18px;
    color: $primary-color;
  }
}

.map .leaflet-bottom {
  z-index: $leaflet-overlay;
  bottom: 0.5em;

  @media print {
    display: none;
  }
}

div.leaflet-container {
  position: absolute;
  flex: 1;
  width: 100%;
  height: 100%;
  background: none;
  z-index: index($zindex, map-container);
  @include font-map-container;

  .leaflet-marker-icon {
    @include font-narrow-medium;
  }
}

.select-from-map {
  height: calc(100vh - 36px);
}

div.current-location-marker > span > svg.icon {
  font-size: 40px;
  color: $current-location-color;
}

.tripMap div.leaflet-marker-icon.place,
.summary-map div.leaflet-marker-icon.place {
  display: none;
}

div.leaflet-marker-icon.from,
div.leaflet-marker-icon.place,
div.leaflet-marker-icon.to,
div.leaflet-marker-icon.via {
  > span {
    > svg.icon {
      height: auto;
      width: auto;
    }
  }
}

div.leaflet-marker-icon.via {
  color: $black;
}

div.leaflet-marker-icon.vehicle-icon {
  border: none;
  background: none;
  > span > svg.icon {
    width: 1.5em;
    height: 1.5em;
    top: -0.25em;
  }
}

div.leaflet-marker-icon.vehicle-icon.small-map-icon {
  > span > svg.icon {
    stroke-width: 40px;
    stroke: white;
    width: 0.78em;
    height: 0.78em;
    top: -0.2em;
    left: -0.2em;
  }
}

.bp-large .map-with-tracking-buttons {
  bottom: 32px;
}

.map-with-tracking-buttons {
  z-index: 401;
  bottom: 192px;
  display: flex;
  right: 30px;
  max-height: 36px;
  max-width: calc(100% - 2em);
  position: absolute;

  [role='button'] {
    max-height: 36px;
    max-width: 36px;
  }

  & > * {
    z-index: index($zindex, map-buttons);
  }

  & > *:not(:first-child) {
    margin-left: 0.5em;
  }
  // DT-3470
  &.roomForZoomControl {
    margin-left: 48px;
  }
}

.toggle-positioning-container {
  background-color: $white;
  padding: 6px;
  border-radius: 5px;
  line-height: 0.5;
  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
}

.icon-mapMarker-toggle-positioning {
  font-size: 24px;
}
/* ... */

